--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "license": "MIT",
   "scripts": {
     "postinstall": "yarn compile",
-    "compile": "hardhat compile",
-    "release": "hardhat compile --config hardhat.config.release.ts",
+    "format": "prettier --write --plugin=prettier-plugin-solidity 'src/**/*.sol'",
+    "compile": "yarn format && hardhat compile",
+    "release:prepare": "yarn format && hardhat compile --config hardhat.config.release.ts && ts-node --files scripts/prepare-release.ts",
     "deploy:counter": "HARDHAT_NETWORK=maticmum ts-node --files scripts/deploy-counter.ts"
   },
   "devDependencies": {
@@ -28,6 +29,8 @@
     "hardhat-deploy": "^0.11.42",
     "hardhat-deploy-ethers": "^0.4.1",
     "hardhat-gas-reporter": "^1.0.8",
+    "prettier": "^3.0.3",
+    "prettier-plugin-solidity": "^1.1.3",
     "solidity-coverage": "^0.8.0",
     "ts-node": ">=8.0.0",
     "typechain": "^8.1.0",
