--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "release:copy-dist": "ts-node --files scripts/copy-dist.ts",
     "release:prepare": "yarn release:compile && yarn release:generate-delta && yarn release:build && yarn release:copy-dist",
     "release": "yarn release:generate-delta && yarn release:build && yarn release:copy-dist && yarn changeset publish",
+    "create-snapshot-release": "ts-node --files scripts/create-snapshot-release.ts",
     "deploy:counter": "HARDHAT_NETWORK=maticmum ts-node --files scripts/deploy-counter.ts"
   },
   "devDependencies": {
