start pr workflow

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "format:contracts": "prettier --write --plugin=prettier-plugin-solidity 'src/**/*.sol'",
     "format": "prettier --write --plugin=prettier-plugin-solidity 'src/**/*.sol' 'scripts/**/*.ts'",
-    "compile": "yarn format && hardhat compile",
+    "compile": "yarn format:contracts && hardhat compile --force --no-typechain",
     "release:compile": "yarn format:contracts && ts-node --files scripts/compile.ts",
     "release:generate-delta": "ts-node --files scripts/generate-delta.ts",
     "release:build": "ts-node --files scripts/build.ts",
