--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "release:prepare": "yarn release:compile && yarn release:generate-delta && yarn release:build && yarn release:copy-dist",
     "release": "yarn release:generate-delta && yarn release:build && yarn release:copy-dist && yarn changeset publish",
     "create-snapshot-release": "ts-node --files scripts/create-snapshot-release.ts",
-    "deploy:counter": "HARDHAT_NETWORK=maticmum ts-node --files scripts/deploy-counter.ts"
+    "deploy:counter": "HARDHAT_NETWORK=maticmum ts-node --files scripts/deploy-counter.ts",
+    "diff-with-latest": "ts-node --files scripts/v2-exploration/diff-with-latest.ts"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
@@ -45,5 +46,8 @@
     "tsup": "^8.0.1",
     "typechain": "^8.1.0",
     "typescript": ">=4.5.0"
+  },
+  "dependencies": {
+    "zod": "^3.23.8"
   }
 }
