--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -23,10 +23,12 @@ jobs:
         run: yarn
       - name: Create temporary release artifacts
         run: yarn compile
+      - name: Compile scripts
+        run: yarn scripts:compile
       - name: Create diff between artifacts and latest release
         uses: actions/github-script@v7
         with:
           script: |
-            const { generateDiffWithLatest } = await import('${{ github.workspace }}/scripts/v2-exploration/diff-with-latest.ts');
+            const { generateDiffWithLatest } = await import('${{ github.workspace }}/dist/diff-with-latest.js');
             const diff = await generateDiffWithLatest();
             console.log(diff);
