--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -27,8 +27,44 @@ jobs:
         run: yarn scripts:compile
       - name: Create diff between artifacts and latest release
         uses: actions/github-script@v7
+        id: artifacts-diff
         with:
           script: |
             const { generateDiffWithLatest } = await import('${{ github.workspace }}/dist/diff-with-latest.js');
             const diff = await generateDiffWithLatest();
-            console.log(diff);
+            return diff;
+      - name: Create or update comment on PR
+        uses: actions/github-script@v7
+        with:
+          script: |
+            // 1. Retrieve existing bot comments for the PR
+            const { data: comments } = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+            });
+            const existingBotComment = comments.find(comment => {
+              return comment.user.type === 'Bot' && comment.body.includes('Release Plan Output')
+            });
+            // 2. Create new comment with diff
+            let output = `#### Release Plan Output
+                \`\`\`
+                Diff: ${{ steps.artifacts-diff.outputs.result }}
+                \`\`\`
+                `;
+            output += diff;          
+            output += \`\`\`;
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            });
+            // 3. Delete previous comment so PR timeline makes sense
+            if (existingBotComment) {
+              github.rest.issues.deleteComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: existingBotComment.id,
+              });
+            }
