--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -50,7 +50,11 @@ jobs:
             console.log(typeof ${{ steps.artifacts-diff.outputs.result }}); // Debugging
             let output = "#### Release Plan Output";
             output += "\n```";
-            output += "Diff";
+            output += "\nDiff";
+            for (const diff of ${{ steps.artifacts-diff.outputs.result }}) {
+              output += "\n";
+              output += `- ${diff.name} (${diff.path}): ${diff.status}`;
+            }
             output += "\n```";
             github.rest.issues.createComment({
               issue_number: context.issue.number,
