--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -49,12 +49,16 @@ jobs:
             // 2. Create new comment with diff
             console.log(typeof ${{ steps.artifacts-diff.outputs.result }}); // Debugging
             let output = "#### Release Plan Output";
-            output += "\n```";
-            for (const diff of ${{ steps.artifacts-diff.outputs.result }}) {
-              output += "\n";
-              output += `- ${diff.name} (${diff.path}): ${diff.status}`;
+            if (${{ steps.artifacts-diff.outputs.result }}.length === 0) {
+              output += "\nNo changes detected in the release artifacts.";
+            } else {
+              output += "\n```";
+              for (const diff of ${{ steps.artifacts-diff.outputs.result }}) {
+                output += "\n";
+                output += `- ${diff.name} (${diff.path}): ${diff.status}`;
+              }
+              output += "\n```";
             }
-            output += "\n```";
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
