--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -74,3 +74,13 @@ jobs:
                 comment_id: existingBotComment.id,
               });
             }
+      - name: Commit latest release artifacts
+        run: |
+          build_info_filename=$(ls -AU artifacts/build-info | head -1)
+          mkdir -p releases/latest
+          cp -r artifacts/buildinfo/$build_info_filename releases/latest/build-info.json
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "update latest release artifacts"
+          git push
