--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -78,7 +78,7 @@ jobs:
         run: |
           build_info_filename=$(ls -AU artifacts/build-info | head -1)
           mkdir -p releases/latest
-          cp -r artifacts/buildinfo/$build_info_filename releases/latest/build-info.json
+          cp -r artifacts/build-info/$build_info_filename releases/latest/build-info.json
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
