--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -1,9 +1,9 @@
-name: Main worflow
+name: Tags workflow
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - "**"
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -26,7 +26,7 @@ jobs:
         run: yarn compile
       - name: Commit release artifacts
         env:
-          RELEASE_TAG: latest
+          RELEASE_TAG: ${{ github.ref_name }}
         run: |
           build_info_filename=$(ls -AU artifacts/build-info | head -1)
           mkdir -p releases/$RELEASE_TAG
