--- a/package.json
+++ b/package.json
@@ -46,9 +46,7 @@
     "ts-node": ">=8.0.0",
     "tsup": "^8.0.1",
     "typechain": "^8.1.0",
-    "typescript": ">=4.5.0"
-  },
-  "dependencies": {
+    "typescript": ">=4.5.0",
     "zod": "^3.23.8"
   }
 }
