--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -1,20 +1,23 @@
 name: Releases workflow
 
 on:
-  release:
-    types: [published]
+  push:
+    tags:
+      - "**"
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
   release:
-    name: Release
+    name: Copy release artifacts on main
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: main
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -34,6 +37,6 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           if [[ `git status --porcelain` ]]; then
             git add .
-            git commit -m "update release artifacts"
+            git commit -m "update release artifacts for $RELEASE_TAG"
             git push
           fi
