--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -25,6 +25,18 @@ jobs:
         run: yarn compile
       - name: Compile scripts
         run: yarn scripts:compile
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-3
+      - name: Download latest release artifacts
+        env:
+          BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+        run: |
+          mkdir -p releases/latest
+          aws s3 cp s3://$BUCKET_NAME/releases/latest/build-info.json releases/latest/build-info.json
       - name: Create diff between artifacts and latest release
         uses: actions/github-script@v7
         id: artifacts-diff
