--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,20 +25,25 @@ jobs:
         run: yarn
       - name: Create artifacts
         run: yarn compile
-      - name: Commit release artifacts
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-3
+      - name: Upload release artifacts
         env:
           RELEASE_TAG: latest
+          BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
         run: |
           build_info_filename=$(ls -AU artifacts/build-info | head -1)
-          mkdir -p releases/$RELEASE_TAG
-          cp -r artifacts/build-info/$build_info_filename releases/$RELEASE_TAG/build-info.json
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          if [[ `git status --porcelain` ]]; then
-            git add .
-            git commit -m "update latest release artifacts"
-            git push
-          fi
+          aws s3 cp artifacts/build-info/$build_info_filename s3://$BUCKET_NAME/releases/$RELEASE_TAG/build-info.json
+      - name: Download latest release artifacts
+        env:
+          BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+        run: |
+          mkdir -p releases/
+          aws s3 cp s3://$BUCKET_NAME/releases/ releases/ --recursive || echo "Error: Failed to download releases from S3."
       - name: Create Release Pull Request or Publish to npm
         id: changesets
         uses: changesets/action@v1
