Support empty deployment, update workflows names (#36)
* fix typos

* support empty deployments

* add changeset

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
   release:
-    name: Release latest
+    name: Upload latest release artifacts and release NPM package
     runs-on: ubuntu-latest
     permissions:
       contents: write
