add release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,8 @@
-name: Releases workflow
+name: Release workflow
 
 on:
-  push:
-    tags:
-      - "**"
+  release:
+    types: [published]
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
