--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -14,7 +14,11 @@ jobs:
         id: create-json
         run: echo "MY_JSON=[{\"name\":\"Jack\"}]" >> $GITHUB_OUTPUT
       - name: Test JSON file
+        run: echo "${{ steps.create-json.outputs.GITHUB_OUTPUT }}"
+      - name: Test JSON file
         run: echo "${{ steps.create-json.outputs.GITHUB_OUTPUT[0] }}"
+      - name: Test JSON file
+        run: echo "${{ steps.create-json.outputs.GITHUB_OUTPUT[0].name }}"
 
   simulate-release:
     name: Simulate release
