--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -14,11 +14,11 @@ jobs:
         id: create-json
         run: echo "MY_JSON=[{\"name\":\"Jack\"}]" >> $GITHUB_OUTPUT
       - name: Test JSON file
-        run: echo "${{ steps.create-json.outputs.MY_JSON }}"
+        run: echo "v${{ steps.create-json.outputs.MY_JSON }}"
       - name: Test JSON file
-        run: echo "${{ steps.create-json.outputs.MY_JSON[0] }}"
+        run: echo "v${{ steps.create-json.outputs.MY_JSON[0] }}"
       - name: Test JSON file
-        run: echo "${{ steps.create-json.outputs.MY_JSON[0].name }}"
+        run: echo "v${{ fromJSON(steps.create-json.outputs.MY_JSON) }}"
 
   simulate-release:
     name: Simulate release
