--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
         if: steps.changesets.outputs.published == 'true'
         env:
           BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+          RELEASE_TAG_WITHOUT_PREFIX: ${{ fromJSON(steps.changesets.outputs.publishedPackages)[0].version }}
         run: |
-          RELEASE_TAG="v${{ steps.changesets.outputs.publishedPackages[0].version }}"
           build_info_filename=$(ls -AU artifacts/build-info | head -1)
-          aws s3 cp artifacts/build-info/$build_info_filename s3://$BUCKET_NAME/releases/$RELEASE_TAG/build-info.json
+          aws s3 cp artifacts/build-info/$build_info_filename s3://$BUCKET_NAME/releases/v$RELEASE_TAG_WITHOUT_PREFIX/build-info.json
