--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "format": "prettier --write --plugin=prettier-plugin-solidity 'src/**/*.sol' 'scripts/**/*.ts'",
     "compile": "yarn format:contracts && hardhat compile --force --no-typechain",
     "release": "./.github/release.sh",
-    "diff-with-latest": "ts-node --files scripts/diff-with-latest.ts",
-    "scripts:compile": "tsup scripts/diff-with-latest.ts",
-    "generate-releases-summary": "ts-node --files scripts/generate-releases-summary.ts",
+    "scripts:compile": "tsup scripts/cli/diff-with-latest.ts",
+    "cli": "ts-node --files scripts/cli/index.ts",
     "hardhat": "hardhat",
     "hardhat:node": "hardhat node",
     "release:build-exposed-abis": "ts-node --files scripts/build-exposed-abis.ts",
     "release:build-deployments-summary": "ts-node --files scripts/build-deployments-summary.ts"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.616.0",
     "@changesets/cli": "^2.27.1",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
@@ -27,12 +27,14 @@
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.8",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@smithy/types": "^3.3.0",
     "@typechain/ethers-v6": "^0.4.0",
     "@typechain/hardhat": "^8.0.0",
     "@types/chai": "^4.2.0",
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=16.0.0",
     "chai": "^4.2.0",
+    "commander": "^12.1.0",
     "dotenv": "^16.3.1",
     "ethers": "^6.8.0",
     "hardhat": "^2.18.1",
