--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,19 +25,13 @@ jobs:
         run: yarn
       - name: Create artifacts
         run: yarn compile
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-3
-      - name: Upload latest release artifacts
+      - name: "Push latest release to S3"
         env:
-          RELEASE_TAG: latest
-          BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
-        run: |
-          build_info_filename=$(ls -AU artifacts/build-info | head -1)
-          aws s3 cp artifacts/build-info/$build_info_filename s3://$BUCKET_NAME/releases/$RELEASE_TAG/build-info.json
+          AWS_S3_BUCKET: ${{ secrets.S3_BUCKET_NAME }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: eu-west-3
+        run: yarn cli push latest
       - name: Create Release Pull Request or Publish to npm
         id: changesets
         uses: changesets/action@v1
