update node to lts

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "hardhat": "hardhat",
     "hardhat:node": "hardhat node",
     "release:build-exposed-abis": "ts-node --files scripts/build-exposed-abis.ts",
-    "release:build-deployments-summary": "ts-node --files scripts/build-deployments-summary.ts"
+    "release:build-deployments-summary": "ts-node --files scripts/build-deployments-summary.ts",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.616.0",
