--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -12,12 +12,10 @@ jobs:
     name: Upload release artifacts
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 20.15.1
+          node-version-file: .nvmrc
       - name: Install dependencies
         run: yarn
       - name: Create artifacts
