--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ concurrency: ${{ github.workflow }}-${{ github.ref }}
 jobs:
   format-and-lint:
     runs-on: ubuntu-latest
-    name: Format and lint check
+    name: Format, lint and type check
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -19,6 +19,7 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: yarn format:check
       - run: yarn lint
+      - run: yarn typecheck
   release:
     name: Upload latest release artifacts and release NPM package
     runs-on: ubuntu-latest
